# rules_oci

./: WORKSPACE  WORKSPACE.bzlmod  fetch.bzl
docs/: cpp.md
e2e/pull/wksp/: MODULE.bazel  WORKSPACE
examples/big_image/: BUILD.bazel
examples/empty_base/: BUILD.bazel
examples/env_inheritance/: BUILD.bazel
examples/multi_arch/: BUILD.bazel
oci/private/: image.sh  tarball.sh.tpl
oci/tests/: BUILD.bazel  oci_spec_test.bzl
