load("@aspect_bazel_lib//lib:testing.bzl", "assert_contains")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//oci:defs.bzl", "oci_image", "oci_image_index")
load(":transition.bzl", "multi_arch")

pkg_tar(
    name = "app",
    srcs = ["test.bash"],
)

oci_image(
    name = "image",
    base = "@ubuntu",
    cmd = ["test.bash"],
    entrypoint = ["bash"],
    tars = ["app.tar"],
)

multi_arch(
    name = "images",
    image = ":image",
    platforms = [
        "//examples:linux_arm64",
        "//examples:linux_amd64",
    ],
)

oci_image_index(
    name = "index",
    images = [
        ":images",
    ],
)

genrule(
    name = "hash",
    srcs = [":index"],
    outs = ["sha256.sum"],
    cmd = "$(JQ_BIN) -r '.manifests[0].digest' $(location :index)/index.json > $@",
    toolchains = ["@jq_toolchains//:resolved_toolchain"],
)

assert_contains(
    name = "check_digest",
    actual = ":hash",
    expected = "sha256:3c202399280421f8554532f70f33f86319bd2c7ef77e161da239f9e290ad3d31",
)
