"Bazel dependencies"

bazel_dep(name = "rules_oci", version = "0.0.0")
bazel_dep(name = "platforms", version = "0.0.7")

local_path_override(
    module_name = "rules_oci",
    path = "../../..",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "empty_image",
    digest = "sha256:fa6f1b1fe754805b7faf3f4ffaad3da4b492a703886c8157acf2a2504d8ad3e4",
    image = "http://localhost:1447/empty_image",
)
use_repo(oci, "empty_image")
